{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 243,
  "lineage": "4b07d554-6b7a-9322-22cb-9b45899e57ac",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_groups",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "custom-security-group",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:224113960740:security-group/sg-0534c195372b46580",
            "description": "Inbound \u0026 Outbound traffic for custom-security-group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0534c195372b46580",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "custom-security-group",
            "name_prefix": "",
            "owner_id": "224113960740",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tv-eks-cluster"
            },
            "tags_all": {
              "Name": "tv-eks-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0971e0d09c036adf4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b2567a7a7c4a793c",
            "domain": "vpc",
            "id": "eipalloc-0b2567a7a7c4a793c",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-54-180-40-29.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "54.180.40.29",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tf-eks-cluster"
            },
            "tags_all": {
              "Name": "tf-eks-cluster"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:224113960740:internet-gateway/igw-04810ea13b49be491",
            "id": "igw-04810ea13b49be491",
            "owner_id": "224113960740",
            "tags": {
              "Name": "tf-eks-cluster"
            },
            "tags_all": {
              "Name": "tf-eks-cluster"
            },
            "vpc_id": "vpc-0971e0d09c036adf4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b2567a7a7c4a793c",
            "association_id": "eipassoc-02a01ac5cfe3aa09a",
            "connectivity_type": "public",
            "id": "nat-0414d504a967c47c5",
            "network_interface_id": "eni-081d3eefd3a10a59f",
            "private_ip": "10.190.0.117",
            "public_ip": "54.180.40.29",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02730dd196640b2fc",
            "tags": {
              "Name": "tf-eks-cluster-ngw"
            },
            "tags_all": {
              "Name": "tf-eks-cluster-ngw"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c06b21acabfb59bb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0414d504a967c47c5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c06b21acabfb59bb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04810ea13b49be491",
            "id": "r-rtb-057a71b5fd2c80f7c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-057a71b5fd2c80f7c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:224113960740:route-table/rtb-0c06b21acabfb59bb",
            "id": "rtb-0c06b21acabfb59bb",
            "owner_id": "224113960740",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tf-eks-cluster-private"
            },
            "tags_all": {
              "Name": "tf-eks-cluster-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0971e0d09c036adf4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:224113960740:route-table/rtb-057a71b5fd2c80f7c",
            "id": "rtb-057a71b5fd2c80f7c",
            "owner_id": "224113960740",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tf-eks-cluster-public"
            },
            "tags_all": {
              "Name": "tf-eks-cluster-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0971e0d09c036adf4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-2a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0351795aec5342fe3",
            "route_table_id": "rtb-0c06b21acabfb59bb",
            "subnet_id": "subnet-04f2a33a626a9676b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.eks"
          ]
        },
        {
          "index_key": "ap-northeast-2c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca8ea90e54be46db",
            "route_table_id": "rtb-0c06b21acabfb59bb",
            "subnet_id": "subnet-044d62acc7f5451f9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-2a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02fef036281648996",
            "route_table_id": "rtb-057a71b5fd2c80f7c",
            "subnet_id": "subnet-02730dd196640b2fc"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks"
          ]
        },
        {
          "index_key": "ap-northeast-2c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd4feada5596246c",
            "route_table_id": "rtb-057a71b5fd2c80f7c",
            "subnet_id": "subnet-0e75dd13abfcc7c94"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:224113960740:subnet/subnet-04f2a33a626a9676b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.190.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f2a33a626a9676b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "224113960740",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-eks-cluster-private-subnet",
              "kubernetes.io/cluster/tf-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "tf-eks-cluster-private-subnet",
              "kubernetes.io/cluster/tf-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0971e0d09c036adf4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks"
          ]
        },
        {
          "index_key": "ap-northeast-2c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:224113960740:subnet/subnet-044d62acc7f5451f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.190.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044d62acc7f5451f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "224113960740",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-eks-cluster-private-subnet",
              "kubernetes.io/cluster/tf-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "tf-eks-cluster-private-subnet",
              "kubernetes.io/cluster/tf-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0971e0d09c036adf4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:224113960740:subnet/subnet-02730dd196640b2fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.190.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02730dd196640b2fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "224113960740",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-eks-cluster-public-subnet",
              "kubernetes.io/cluster/tf-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "tf-eks-cluster-public-subnet",
              "kubernetes.io/cluster/tf-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0971e0d09c036adf4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks"
          ]
        },
        {
          "index_key": "ap-northeast-2c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:224113960740:subnet/subnet-0e75dd13abfcc7c94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.190.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e75dd13abfcc7c94",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "224113960740",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-eks-cluster-public-subnet",
              "kubernetes.io/cluster/tf-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "tf-eks-cluster-public-subnet",
              "kubernetes.io/cluster/tf-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0971e0d09c036adf4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:224113960740:vpc/vpc-0971e0d09c036adf4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.190.0.0/16",
            "default_network_acl_id": "acl-062ee2769de8d5496",
            "default_route_table_id": "rtb-0b32c801a827ca470",
            "default_security_group_id": "sg-072bd06a0544c4b0e",
            "dhcp_options_id": "dopt-0f05e95da73deba8b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0971e0d09c036adf4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b32c801a827ca470",
            "owner_id": "224113960740",
            "tags": {
              "Name": "tf-eks-cluster-vpc"
            },
            "tags_all": {
              "Name": "tf-eks-cluster-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.workbench",
      "mode": "managed",
      "type": "aws_instance",
      "name": "workbench",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-027ce4ce0590e3c98",
            "arn": "arn:aws:ec2:ap-northeast-2:224113960740:instance/i-0c7cba8314855f82a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c7cba8314855f82a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "tf-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c715e89ae0c4459a",
            "private_dns": "ip-10-190-0-122.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.190.0.122",
            "public_dns": "ec2-13-125-228-184.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.125.228.184",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0621a7f09828f735a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02730dd196640b2fc",
            "tags": {
              "Name": "tf-workbench"
            },
            "tags_all": {
              "Name": "tf-workbench"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e3835326968d92ef"
            ]
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks",
            "module.workbench.aws_key_pair.tf-key-pair",
            "module.workbench.aws_security_group.instance"
          ]
        }
      ]
    },
    {
      "module": "module.workbench",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:224113960740:security-group/sg-0e3835326968d92ef",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e3835326968d92ef",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tf-workbench-sg",
            "name_prefix": "",
            "owner_id": "224113960740",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-workbench-sg"
            },
            "tags_all": {
              "Name": "tf-workbench-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0971e0d09c036adf4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.eks"
          ]
        }
      ]
    }
  ]
}